vcluster_versioned_docs/version-0.24.0/_partials/config/sync/fromHost/secrets.mdx

<details className="config-field" data-expandable="true">
<summary>

## `secrets` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets}

Secrets defines if secrets in the host should get synced to the virtual cluster.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-enabled}

Enabled defines if this option should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `patches` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches}

Patches patch the resource according to the provided specification.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `path` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-path}

Path is the path within the patch to target. If the path is not found within the patch, the patch is not applied.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `expression` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-expression}

Expression transforms the value according to the given JavaScript expression.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `reverseExpression` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reverseExpression}

ReverseExpression transforms the value according to the given JavaScript expression.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `reference` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reference}

Reference treats the path value as a reference to another object and will rewrite it based on the chosen mode
automatically. In single-namespace mode this will translate the name to "vxxxxxxxxx" to avoid conflicts with
other names, in multi-namespace mode this will not translate the name.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersion` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reference-apiVersion}

APIVersion is the apiVersion of the referenced object.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `apiVersionPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reference-apiVersionPath}

APIVersionPath is optional relative path to use to determine the kind. If APIVersionPath is not found, will fallback to apiVersion.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kind` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reference-kind}

Kind is the kind of the referenced object.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kindPath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reference-kindPath}

KindPath is the optional relative path to use to determine the kind. If KindPath is not found, will fallback to kind.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namePath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reference-namePath}

NamePath is the optional relative path to the reference name within the object.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `namespacePath` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-reference-namespacePath}

NamespacePath is the optional relative path to the reference namespace within the object. If omitted or not found, namespacePath equals to the
metadata.namespace path of the object.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `labels` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-patches-labels}

Labels treats the path value as a labels selector.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `mappings` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-mappings}

Mappings for Namespace and Object

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `byName` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> <span data-pro="false" className="config-field-pro">pro</span> {#secrets-mappings-byName}

ByName is a map of host-object-namespace/host-object-name: virtual-object-namespace/virtual-object-name.
There are several wildcards supported:
1. To match all objects in host namespace and sync them to different namespace in vCluster:
byName:
  "foo/*": "foo-in-virtual/*"
2. To match specific object in the host namespace and sync it to the same namespace with the same name:
byName:
  "foo/my-object": "foo/my-object"
3. To match specific object in the host namespace and sync it to the same namespace with different name:
byName:
  "foo/my-object": "foo/my-virtual-object"
4. To match all objects in the vCluster host namespace and sync them to a different namespace in vCluster:
byName:
  "": "my-virtual-namespace/*"
5. To match specific objects in the vCluster host namespace and sync them to a different namespace in vCluster:
byName:
  "/my-object": "my-virtual-namespace/my-object"

</summary>



</details>


</details>


</details>
